--- a/package.json
+++ b/package.json
@@ -6,17 +6,32 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "server": "nodemon ./server",
+    "all": "npm-run-all --parallel dev server",
+    "lint": "eslint --fix . && echo 'Lint complete.'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.8",
     "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-config-prettier": "^6.4.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.1.2",
+    "nodemon": "^1.19.3",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.18.2"
   }
 }
