--- a/.eslintrc
+++ b/.eslintrc
@@ -23,7 +23,7 @@
   "rules": {
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
-    // "linebreak-style": ["error", "unix"],
+    "linebreak-style": ["error", "unix"],
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": "off",
